<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">DeviceSampleAPI</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_nfc">NfcActivity</string>
    <string name="txt_hint_nfc">Enable or disable NFC, then check it under settings.</string>
    <string name="title_activity_battery">Battery Activity</string>
    <string name="txt_hint_battery">Battery informations can be retrieved through Datalogic APIs and Android APIs.</string>
    <string name="title_activity_info">Info Activity</string>
    <string name="txt_hint_info">Datalogic device info can be accessed through APIs.</string>
    <string name="title_activity_location">LocationActivity</string>
    <string name="txt_hint_location">Change location mode, then check it under settings.</string>
    <string name="title_activity_notification">NotificationActivity</string>
    <string name="txt_hint_notification">Turn on/off device LEDs.</string>
    <string name="title_activity_touch">TouchActivity</string>
    <string name="title_activity_reset">ResetActivity</string>
    <string name="txt_hint_reset">Select one of the following items to perform a specific reset.</string>
    <string name="btnTouch">Lock Touch for 2 Seconds</string>
    <string name="title_activity_sleep">SleepActivity</string>
    <string name="txt_hint_sleep">Power configurations and Wakeup sources can be configured.</string>
    <string name="action_reset">Reload Activity</string>
    <string name="txt_thresh_low">Click below to set battery threshold for low level.</string>
    <string name="txt_thresh_crit">Click below to set battery threshold for critical level.</string>
    <string name="txt_hint_start">Click below to open an activity.</string>
    <string name="switch_nfc">Switch NFC</string>
    <string name="device_image">Device Image</string>
    <string name="switch_gps_mode">Switch GPS mode</string>
    <string name="blink_spot">Blink Green spot 10 times</string>
    <string name="toggle_spot">Toggle Green spot</string>
    <string name="go_to_settings">Go To Settings</string>
    <string name="text_view">TextView</string>
    <string name="click_below">Click below to set suspend timeout, or wakeup sources activated</string>
    <string name="button_1">Button 1</string>
    <string name="button_2">Button 2</string>
    <string name="button_3">Button 3</string>
    <string name="button_4">Button 4</string>


</resources>